--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
-  }
+    "express": "^4.21.2",
+    "mysql2": "^3.12.0"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "keywords": []
 }
